--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello system</title>
 </head>
+
 <body>
         <h1>Hi from MT</h1>
+        <form method="POST" action="/setup-profile">
+            <button type = "submit">Setup profile</button>
+        </form>
 </body>
 </html>
