--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -37,10 +37,15 @@
       }(document, 'script', 'facebook-jssdk'));
     </script>
 
-<body>
+<br>
         <h1>Hi from MT</h1>
         <form method="POST" action="/setup-profile">
             <button type = "submit">Setup profile</button>
         </form>
+
+        <br />
+        <form method="POST" action="/setup-persistent-menu">
+          <button type = "submit">Setup persistent menu</button>
+      </form>
 </body>
 </html>
