--- a/src/views/reverse-book.ejs
+++ b/src/views/reverse-book.ejs
@@ -16,13 +16,52 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Load custom Javascript and CSS-->
+<link rel="stylesheet" href="/css/style.css">
+<script src="/js/reserve-table.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <div class="container">
-            Hi
+    <div class="container fix-height">
+        <div class="row">
+            <div class="col-12">
+                <div class="text-center mt-3">
+                    <span class="title">Order Information</span>
+                </div>
+                <input type="text" id="psid" hidden>
+                <div class="form-group">
+                    <label for="customerName">Full name:</label>
+                    <input type="text" id="customerName" class="form-control " placeholder="Full name...">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email (<span style="color: red">*</span>):</label>
+                    <input type="email" id="email" class="form-control" placeholder="Email...">
+                    <div class="invalid-feedback">Email address is not valid.</div>
+                </div>
+                <div class="form-group">
+                    <label for="phoneNumber">Phone number (<span style="color: red">*</span>):</label>
+                    <input type="text" id="phoneNumber" class="form-control" placeholder="Phone number...">
+                    <div class="invalid-feedback">Phone number invalid :().</div>
+                </div>
+                <button class="btn btn-primary" id="btnReserveTable"> Order </button>
+            </div>
+
         </div>
+
     </div>
+    <footer>
+        <div class="text-center">
+            <div class="">
+                <span class="mr-3"> &copy; <a title=" Youtube"
+                        href="https://www.youtube.com"
+                        target="_blank">Tutorial</a></span>
+                <span class="ml-3">
+                    From <a href="https://www.youtube.com"
+                        title="Visit IU website" target="_blank">...</a>
+                </span>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
