--- a/src/views/reverse-book.ejs
+++ b/src/views/reverse-book.ejs
@@ -44,7 +44,7 @@
                     <input type="text" id="phoneNumber" class="form-control" placeholder="Phone number...">
                     <div class="invalid-feedback">Phone number invalid :().</div>
                 </div>
-                <button class="btn btn-primary" id="btnReserveTable"> Order </button>
+                <button class="btn btn-primary" id="btnOrderBook"> Order </button>
             </div>
 
         </div>
