--- a/src/views/reserve-book.ejs
+++ b/src/views/reserve-book.ejs
@@ -19,7 +19,7 @@
 
 <!-- Load custom Javascript and CSS-->
 <link rel="stylesheet" href="/css/style.css">
-<script src="/js/reserve-book.js"></script>
+<script src="/src/public/js/reserve-book.js"></script>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
                 <input type="text" id="psid" hidden>
                 <div class="form-group">
                     <label for="customerName">Full name:</label>
-                    <input type="text" id="customerName" class="form-control " placeholder="Full name...">
+                    <input type="text" id="customerName" class="form-control is-invalid " placeholder="Full name...">
                 </div>
                 <div class="form-group">
                     <label for="email">Email (<span style="color: red">*</span>):</label>
