--- a/src/views/reserve-book.ejs
+++ b/src/views/reserve-book.ejs
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Book</title>
+    <title>Đặt bàn nhà hàng Eric</title>
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-<!-- jQuery library -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<!-- Popper JS -->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
-<!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<!-- Load custom Javascript and CSS-->
-<link rel="stylesheet" href="/css/style.css">
-<script src="/src/public/js/reserve-book.js"></script>
+    <!-- Load custom Javascript and CSS-->
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/reserve-table.js"></script>
+
 </head>
 
 <body>
@@ -27,24 +29,24 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center mt-3">
-                    <span class="title">Order Information</span>
+                    <span class="title">Thông tin khách hàng</span>
                 </div>
                 <input type="text" id="psid" hidden>
                 <div class="form-group">
-                    <label for="customerName">Full name:</label>
-                    <input type="text" id="customerName" class="form-control is-invalid " placeholder="Full name...">
+                    <label for="customerName">Họ và tên:</label>
+                    <input type="text" id="customerName" class="form-control " placeholder="Họ và tên...">
                 </div>
                 <div class="form-group">
-                    <label for="email">Email (<span style="color: red">*</span>):</label>
-                    <input type="email" id="email" class="form-control" placeholder="Email...">
-                    <div class="invalid-feedback">Email address is not valid.</div>
+                    <label for="email">Địa chỉ email (<span style="color: red">*</span>):</label>
+                    <input type="email" id="email" class="form-control" placeholder="Địa chỉ email...">
+                    <div class="invalid-feedback">Địa chỉ email không hợp lệ.</div>
                 </div>
                 <div class="form-group">
-                    <label for="phoneNumber">Phone number (<span style="color: red">*</span>):</label>
-                    <input type="text" id="phoneNumber" class="form-control" placeholder="Phone number...">
-                    <div class="invalid-feedback">Phone number invalid :().</div>
+                    <label for="phoneNumber">Số điện thoại (<span style="color: red">*</span>):</label>
+                    <input type="text" id="phoneNumber" class="form-control" placeholder="Số điện thoại...">
+                    <div class="invalid-feedback">Số điện thoại không hợp lệ.</div>
                 </div>
-                <button class="btn btn-primary" id="btnOrderBook"> Order </button>
+                <button class="btn btn-primary" id="btnReserveTable"> ĐẶT BÀN </button>
             </div>
 
         </div>
@@ -53,15 +55,16 @@
     <footer>
         <div class="text-center">
             <div class="">
-                <span class="mr-3"> &copy; <a title=" Youtube"
-                        href="https://www.youtube.com"
-                        target="_blank">Tutorial</a></span>
+                <span class="mr-3"> &copy; <a title="Xem full tutorial trên Youtube"
+                        href="https://www.youtube.com/playlist?list=PLncHg6Kn2JT6oBfsbNTYHWJNkjF3tNpp4"
+                        target="_blank">Chatbot Tutorial</a></span>
                 <span class="ml-3">
-                    From <a href="https://www.youtube.com"
-                        title="Visit IU website" target="_blank">...</a>
+                    Tạo bởi <a href="https://www.youtube.com/channel/UCVkBcokjObNZiXavfAE1-fA?sub_confirmation=1"
+                        title="Xem kênh Hỏi Dân IT" target="_blank">Hỏi Dân IT</a>
                 </span>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
