--- a/src/views/reserve-book.ejs
+++ b/src/views/reserve-book.ejs
@@ -46,7 +46,7 @@
                     <input type="text" id="phoneNumber" class="form-control" placeholder="Số điện thoại...">
                     <div class="invalid-feedback">Số điện thoại không hợp lệ.</div>
                 </div>
-                <button class="btn btn-primary" id="btnReserveTable"> ĐẶT BÀN </button>
+                <button class="btn btn-primary" id="btnOrderBook"> ĐẶT BÀN </button>
             </div>
 
         </div>
