--- a/src/views/reserve-book.ejs
+++ b/src/views/reserve-book.ejs
@@ -20,7 +20,7 @@
 
     <!-- Load custom Javascript and CSS-->
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/src/public/js/reserve-book.js"></script>
+    <script src="/js/reserve-book.js"></script>
 
 </head>
 
