--- a/src/views/reserve-book.ejs
+++ b/src/views/reserve-book.ejs
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        let senderId = "<%= senderId %>"
+    </script>
     <title>Đặt bàn nhà hàng Eric</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -20,6 +23,7 @@
 
     <!-- Load custom Javascript and CSS-->
     <link rel="stylesheet" href="/css/style.css">
+
     <script src="/js/reserve-book.js"></script>
 
 </head>
