--- a/src/views/reserve-book.ejs
+++ b/src/views/reserve-book.ejs
@@ -33,24 +33,29 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center mt-3">
-                    <span class="title">Thông tin khách hàng</span>
+                    <span class="title">Order Information</span>
                 </div>
                 <input type="text" id="psid" hidden>
                 <div class="form-group">
-                    <label for="customerName">Họ và tên:</label>
-                    <input type="text" id="customerName" class="form-control " placeholder="Họ và tên...">
+                    <label for="customerName">Name:</label>
+                    <input type="text" id="customerName" class="form-control " placeholder="Name...">
                 </div>
                 <div class="form-group">
-                    <label for="email">Địa chỉ email (<span style="color: red">*</span>):</label>
-                    <input type="email" id="email" class="form-control" placeholder="Địa chỉ email...">
-                    <div class="invalid-feedback">Địa chỉ email không hợp lệ.</div>
+                    <label for="email">Email (<span style="color: red">*</span>):</label>
+                    <input type="email" id="email" class="form-control" placeholder="Email...">
+                    <div class="invalid-feedback">Email is not valid.</div>
                 </div>
                 <div class="form-group">
-                    <label for="phoneNumber">Số điện thoại (<span style="color: red">*</span>):</label>
-                    <input type="text" id="phoneNumber" class="form-control" placeholder="Số điện thoại...">
-                    <div class="invalid-feedback">Số điện thoại không hợp lệ.</div>
+                    <label for="phoneNumber">Phone number (<span style="color: red">*</span>):</label>
+                    <input type="text" id="phoneNumber" class="form-control" placeholder="Phone number...">
+                    <div class="invalid-feedback">Phone number is not valid.</div>
                 </div>
-                <button class="btn btn-primary" id="btnOrderBook"> ĐẶT BÀN </button>
+                <div class="form-group">
+                    <label for="book">Book's name (<span style="color: red">*</span>):</label>
+                    <input type="text" id="Book" class="form-control" placeholder="Book' name...">
+                    <div class="invalid-feedback">.</div>
+                </div>
+                <button class="btn btn-primary" id="btnOrderBook"> Order </button>
             </div>
 
         </div>
@@ -59,12 +64,12 @@
     <footer>
         <div class="text-center">
             <div class="">
-                <span class="mr-3"> &copy; <a title="Xem full tutorial trên Youtube"
-                        href="https://www.youtube.com/playlist?list=PLncHg6Kn2JT6oBfsbNTYHWJNkjF3tNpp4"
-                        target="_blank">Chatbot Tutorial</a></span>
+                <span class="mr-3"> &copy; <a title="Visit IU Website"
+                        href="https://hcmiu.edu.vn/en/"
+                        target="_blank">IU</a></span>
                 <span class="ml-3">
-                    Tạo bởi <a href="https://www.youtube.com/channel/UCVkBcokjObNZiXavfAE1-fA?sub_confirmation=1"
-                        title="Xem kênh Hỏi Dân IT" target="_blank">Hỏi Dân IT</a>
+                    Create by <a href="https://www.facebook.com/"
+                        title="Developed by" target="_blank">IT student</a>
                 </span>
             </div>
         </div>
