--- a/src/views/reserve-book.ejs
+++ b/src/views/reserve-book.ejs
@@ -52,7 +52,7 @@
                 </div>
                 <div class="form-group">
                     <label for="book">Book's name (<span style="color: red">*</span>):</label>
-                    <input type="text" id="Book" class="form-control" placeholder="Book' name...">
+                    <input type="text" id="book" class="form-control" placeholder="Book' name...">
                     <div class="invalid-feedback">.</div>
                 </div>
                 <button class="btn btn-primary" id="btnOrderBook"> Order </button>
